# vibetwitch

./: .dockerignore  .gitignore  Dockerfile  Justfile  docker-compose.yml
deploy/: mediamtx-prod.yml  mediamtx.yml  supervisord.conf
server/: Cargo.toml
server/agent/: Cargo.toml
server/agent/src/: main.rs  transport.rs
server/agent/src/watchers/: filesystem.rs  git.rs  mod.rs
server/agent/src/watchers/ai/: claude_code.rs
server/crates/api/: Cargo.toml
server/crates/api/src/: config.rs  error.rs  main.rs  state.rs
server/crates/api/src/auth/: jwt.rs  middleware.rs
server/crates/api/src/routes/: auth.rs  hooks.rs  mod.rs  streams.rs  users.rs
server/crates/api/src/ws/: chat.rs  event_hub.rs  events.rs  hub.rs  ingest.rs  mod.rs
server/crates/db/: Cargo.toml
server/crates/db/src/: lib.rs
server/crates/db/src/migrations/: 001_initial.sql
server/crates/db/src/models/: chat_message.rs  code_event.rs  mod.rs  stream.rs  user.rs
server/crates/db/src/queries/: chat.rs  events.rs  mod.rs  streams.rs  users.rs
server/crates/shared/: Cargo.toml
server/crates/shared/src/: events.rs  lib.rs  protocol.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/components/browse/: StreamCard.tsx
web/src/components/layout/: AppShell.tsx  Navbar.tsx
web/src/components/stream/: ChatPanel.tsx  VideoPlayer.tsx
web/src/components/structured/: CodeBlock.tsx  ConversationView.tsx  DiffView.tsx  FileTreeView.tsx  StructuredPanel.tsx
web/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Input.tsx  LiveIndicator.tsx
web/src/hooks/: useChatWs.ts  useEventsWs.ts
web/src/lib/: api.ts  ws.ts
web/src/pages/: BrowsePage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  StreamPage.tsx
web/src/stores/: auth.ts
web/src/styles/: globals.css
