[package]
name = "vibetwitch-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
vibetwitch-shared = { path = "../crates/shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = "8"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
