[package]
name = "vibetwitch-api"
version = "0.1.0"
edition = "2024"

[dependencies]
vibetwitch-shared = { path = "../shared" }
vibetwitch-db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.9"
dotenvy = "0.15"
dashmap = "6"
futures = "0.3"
