[package]
name = "vibetwitch-db"
version = "0.1.0"
edition = "2024"

[dependencies]
vibetwitch-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
tracing = { workspace = true }
thiserror = { workspace = true }
